--- a/_quarto.yml
+++ b/_quarto.yml
@@ -12,10 +12,14 @@ website:
 format:
   html:
     theme:
-      - cosmo
+      - lux
       - brand
     css: styles.css
     toc: true
 
 editor: visual
+
+execute:
+  freeze: auto
+  
 
